--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "reselect": "^4.1.6"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.7.0",
